# ds-fashion-mnist-classifier-2.0

./: .dockerignore  Dockerfile  README.md  fashion_mnist_classifier_2_0.ipynb  pyproject.toml
fashion_mnist_classifier_2_0/: app.py  load_data.py  load_models.py  load_training_graphs.py  preprocessing_img.py  preprocessing_result_model.py
fashion_mnist_classifier_2_0/data/models/: cnn_fashion.h5  vgg16_fashion_fine_tune.h5
fashion_mnist_classifier_2_0/data/texts/: description.txt  instruction.txt
